deploy/kubernetes/GKE/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tj-service
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    component: tooljet
  type: NodePort
